--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^5.6.1"
+    "lodash": "^4.17.14",
+    "mongoose": "^5.6.4"
   }
 }
